<resources>
    <string name="app_name">Trivia</string>
    <string name="title_text">Trivia</string>
    <string name="out_of_text">Question: 0/913</string>
    <string name="true_button">True</string>
    <string name="false_button">false</string>
    <string name="next_button">Next</string>
    <string name="text_formatted">Question: %d/%d</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect">Incorrect</string>
</resources>